--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:widget": "node scripts/build-widget.js"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "@types/google-spreadsheet": "^3.3.2",
