--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "resend": "^4.1.1",
     "tailwind-merge": "^2.6.0"
   },
